(Pretty) Fix Search Post Container gap

--- a/src/views/Search.module.sass
+++ b/src/views/Search.module.sass
@@ -31,4 +31,4 @@
         .usersContainer
             @apply flex flex-col gap-8
         .postsContainer
-            @apply flex flex-col
+            @apply flex flex-col gap-8
